<resources>
    <string name="app_name">设置</string>
    <string name="tab_bluetooth">蓝牙设置</string>
    <string name="tab_display">显示设置</string>
    <string name="tab_sound_effect">音效设置</string>
    <string name="tab_time">时间设置</string>
    <string name="tab_system">系统设置</string>
    <string name="tab_wifi">WIFI设置</string>
    <string name="tab_navigation">导航设置</string>
    <string name="tab_vehicle">车辆设置</string>
    <string name="tab_on">关于</string>
    <string name="tab_cache">储存空间</string>
    <string name="tab_wifi_spot">wifi热点</string>
    <string name="btn_clear_cache">清除缓存</string>
    <string name="btn_clear_data">清除数据</string>
    <string name="Start">开始</string>
    <string name="rbtn_chinese">中文（简体）</string>
    <string name="rbtn_chinese_">中文（繁体）</string>
    <string name="rbtn_english">English</string>
    <string name="title_automatic">自动调节亮度</string>
    <string name="label_open">开</string>
    <string name="label_off">关</string>
    <string name="title_dimming_day">白天亮度调节</string>
    <string name="title_dimming_night">夜间亮度调节</string>
    <string name="label_Language_switching">语言切换</string>
    <string name="label_restore_default">恢复默认设置</string>
    <string name="dialog_restore_default">确定要恢复默认设置吗？</string>
    <string name="dialog_connect">确定</string>
    <string name="tv_setting_update_name">名称不能为空</string>
    <string name="tv_power">关 屏</string>
    <string name="tv_home">主屏幕</string>
    <string name="tv_vioce_add">音量加</string>
    <string name="tv_vioce_dec">音量减</string>
    <string name="tv_back">返 回</string>
    <string name="wifi">WIFI</string>
    <string name="toast_wifi_open">如需查看可用网络，请打开WIFI</string>
    <string name="wifi_error">wifi set fail</string>
    <string name="wifi_text_scan">搜索到的AP</string>
    <string name="wifi_text_saved">在范围内已保存的AP</string>
    <string name="wifi_text_password">请输入密码</string>
    <string name="wifi_text_show_password">显示密码</string>
    <string name="wifi_text_name">name</string>
    <string name="wifi_text_connect">连接</string>
    <string name="wifi_text_forget">忘记</string>
    <string name="wifi_text_disconnect">断开</string>
    <string name="wifi_text_modify">修改</string>
    <string name="wifi_text_cancel">取消</string>
    <string name="wifi_add_network">添加网络</string>
    <string name="wifi_text_name_input">请输入SSID</string>
    <string name="wifi_text_need_password">需要密码</string>
    <string name="wifi_text_state_none">  </string>
    <string name="wifi_text_state_connected">已连接</string>
    <string name="wifi_text_state_connecting">正在连接</string>
    <string name="wifi_text_state_disconnected">连接断开</string>
    <string name="wifi_text_state_disconnecting">正在断开</string>
    <string name="wifi_text_state_failed">连接失败</string>
    <string name="wifi_text_state_authenticating">身份认证</string>
    <string name="wifi_text_state_obtaining_ipaddr">获取地址</string>
    <string name="wifi_scan">扫描</string>
    <string name="system">系统</string>
    <string name="device_info">设备信息</string>
    <string name="version_info">版本信息</string>
    <string name="system_info">系统信息</string>
    <string name="label_treble">高音</string>
    <string name="label_midrange">中音</string>
    <string name="label_bass">低音</string>
    <string name="str_eq_volume">音量</string>
    <string name="str_tx_dsp_bass">低音</string>
    <string name="str_tx_dsp_mid">中音</string>
    <string name="str_tx_dsp_tre">高音</string>
    <string name="str_tx_dsp_dbb">响度</string>
    <string name="str_tx_dsp_asl">通道</string>
    <string name="str_honda_dsp_off">主通道</string>
    <string name="str_tx_dsp_surround">静音</string>
    <string name="str_honda_dsp_low">次通道</string>
    <string name="str_honda_dsp_mid">混通道</string>
    <string name="label_time">时间</string>
    <string name="label_date">日期</string>
    <string name="label_time_system">选择时间制式</string>
    <string name="label_24_hour_system">24小时制</string>
    <string name="label_12_hour_system">12小时制</string>
    <string name="label_adjust">自动调节时钟</string>
    <string name="label_adjust_off">关闭</string>
    <string name="label_adjust_open">打开</string>
    <string name="label_time_zone">时区设置</string>
    <string name="time_12_24">24</string>
    <string name="hour_hint">时</string>
    <string name="minute_hint">分</string>
    <string name="year_hint">年</string>
    <string name="month_hint">月</string>
    <string name="day_hint">日</string>
    <string name="tab_sound_mode">EQ模式</string>
    <string name="tab_reset">复位</string>
    <string name="tab_am">上午</string>
    <string name="tab_pm">下午</string>
    <string name="tab_suspension_Setting">悬浮按钮设置</string>
    <string name="dialog_prompt">是否要保存为自定义?</string>
    <string-array name="hour_apm">
        <item>上午</item>
        <item>下午</item>

    </string-array>
    <string name="date">yyyy年MM月dd日</string>
    <string-array name="hour_display">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>
    <string-array name="hour_12_display">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="minute_display">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>
    <string name="tab_software_navigation">导航软件</string>
    <string name="tab_switch_mixing">导航混音开关</string>
    <string name="tab_proportion_mixing">导航混音比例</string>
    <string name="tab_sound_mixing">导航混音</string>
    <string name="tab_model_selection">车型选择</string>
    <string name="tab_reversing_mirror">倒车镜像</string>
    <string name="tab_reverse_display">倒车显示效果调节</string>
    <string name="tab_key_learning">按键学习</string>
    <string name="tab_mirror_normal">正常镜像</string>
    <string name="tab_up_down_normal">上下镜像</string>
    <string name="tab_about_normal">左右镜像</string>
    <string name="tab_up_down_left_right_normal">上下左右镜像</string>
    <string name="dialog_title">操作说明</string>
    <string name="dialog_default">倒车视频时，两指长按屏幕3秒调出半透明倒车视频调节框，亮度，对比度，饱和度；点调节框外或不操作3秒后调节框消失。</string>
    <string name="str_settings_wheel_begin">开始</string>
    <string name="str_settings_wheel_reset">复位</string>
    <string name="str_settings_wheel_finish">完成</string>
    <string name="str_settings_wheel_type">短按</string>
    <string name="str_settings_wheel_prev">上一个</string>
    <string name="str_settings_wheel_next">下一个</string>
    <string name="str_settings_wheel_vol_inc">音量+</string>
    <string name="str_settings_wheel_vol_dec">音量-</string>
    <string name="str_settings_wheel_mute">静音</string>
    <string name="str_settings_wheel_bt">蓝牙</string>
    <string name="str_settings_wheel_hung">接听/挂断</string>
    <string name="str_settings_wheel_voice">语音</string>
    <string name="str_settings_wheel_mode">模式</string>
    <string name="str_settings_wheel_power">电源</string>
    <string name="str_settings_wheel_band">波段</string>
    <string name="str_settings_wheel_navigation">导航</string>
    <string name="str_settings_wheel_info_tips">点击 [开始] 按钮进行学习</string>
    <string name="str_settings_wheel_title">点击开始后,先点击界面按钮,再点击对应的方控按钮,全部学习完点击结束</string>
    <string name="str_settings_wheel_enter_learning">已进入学习状态</string>
    <string name="str_settings_wheel_touch_key">请按方控按键</string>
    <string name="str_settings_wheel_exit_learning">已退出学习状态</string>
    <string name="str_settings_wheel_learn_success">学习成功</string>
    <string name="str_settings_wheel_learn_error">学习失败</string>
    <string name="label_system_version_number">系统版本号：</string>
    <string name="label_MCU_version_number">MCU版本号：</string>
    <string name="label_CAN_version_number">CAN版本号：</string>
    <string name="label_identifier">识别码：</string>
    <string name="label_android_version">安卓版本：</string>
    <string name="label_kernel_version">内核版本：</string>
    <string name="label_upgrade_update">升级更新</string>
    <string name="tab_prohibit_video_while_driving">行车时禁止视频</string>
    <string name="tab_touch_tone">按键音</string>
    <string name="tab_system_cleanup">系统清理</string>
    <string name="tab_factory_setting">工厂设置</string>
    <string name="tab_reset_system">恢复出厂设置</string>
    <string name="tab_restart">重新启动</string>
    <string name="tab_cleaning_up">清理中.....</string>
    <string name="tab_clean_up">清理完成</string>
    <string name="dialog_1">1</string>
    <string name="dialog_2">2</string>
    <string name="dialog_3">3</string>
    <string name="dialog_4">4</string>
    <string name="dialog_5">5</string>
    <string name="dialog_6">6</string>
    <string name="dialog_7">7</string>
    <string name="dialog_8">8</string>
    <string name="dialog_9">9</string>
    <string name="dialog_0">0</string>
    <string name="dialog_restore">确定恢复出厂设置吗？</string>
    <string name="device_restart">%1$d s后重新启动</string>
    <string name="device_restarts">5s后重新启动</string>
    <string name="str_scanning">扫描</string>
    <string name="str_sound_7">7</string>
    <string name="str_sound_negative_7">-7</string>
    <string name="tv_setting_name">本机蓝牙</string>
    <string name="tv_setting_bluetooth">蓝牙</string>
    <string name="tv_setting_close">关闭</string>
    <string name="tv_setting_check">开启检测</string>
    <string name="tv_setting_check_des">已关闭，只允许配对设备检测</string>
    <string name="tv_setting_check_">已开启，只允许配对设备检测</string>
    <string name="tv_setting_pair">已配对设备</string>
    <string name="tv_setting_del_all">删除全部</string>
    <string name="tv_setting_search_ing">正在搜索设备...</string>
    <string name="tv_setting_start_search">开始搜索</string>
    <string name="tv_setting_available">可用设备</string>
    <string name="txt_standard">标准</string>
    <string name="txt_popular">流行</string>
    <string name="txt_ock">摇滚</string>
    <string name="txt_jazz">爵士</string>
    <string name="txt_classical">古典</string>
    <string name="txt_customize">自定义</string>
    <string name="wifi_text_not_enabled">未启用</string>
    <string name="wifi_text_wifi_saved">已保存</string>
    <string name="wifi_text_wifi_connected">已连接</string>
</resources>