<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_scan_result"
    style="@style/record_voice_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/text_name_dialog"
        style="@style/style_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/dialog_restore_default" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_connect_btn"

            style="@style/dialog_bit"
            android:layout_marginRight="30dp"
            android:text="@string/dialog_connect" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/dialog_bit"
            android:layout_marginLeft="30dp"

            android:text="@string/wifi_text_cancel"
            android:textColor="@color/text_txt" />


    </LinearLayout>
</LinearLayout>
