<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60px"
        android:gravity="center">

        <TextView
            android:id="@+id/txt_title"
            style="@style/style_title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />


    </LinearLayout>

    <TextView style="@style/style_line_txt" />

    <LinearLayout
        android:id="@+id/year_picker"
        android:layout_width="match_parent"
        android:layout_height="180px"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20px">

        <com.jancar.settings.widget.dateandtimepickerview.NumberPickerView
            android:id="@+id/picker_year"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="picker_hour"
            app:npv_HintText="@string/year_hint"
            app:npv_ItemPaddingHorizontal="5dp"
            app:npv_ItemPaddingVertical="5dp"
            app:npv_RespondChangeInMainThread="false"
            app:npv_ShowCount="3"
            app:npv_DividerColor="@color/div_dialog"
            app:npv_TextArray="@array/hour_display"
            app:npv_TextColorHint="@color/text_txt"
            app:npv_TextColorNormal="@color/text_txt"
            app:npv_TextColorSelected="@color/text_txt"
            android:layout_marginRight="10dp"
            app:npv_TextSizeNormal="16sp"
            app:npv_TextSizeSelected="22px"
            app:npv_WrapSelectorWheel="true"/>

        <com.jancar.settings.widget.dateandtimepickerview.NumberPickerView
            android:id="@+id/picker_month"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="picker_minute"
            app:npv_HintText="@string/month_hint"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            app:npv_DividerColor="@color/div_dialog"
            app:npv_TextArray="@array/hour_display"
            app:npv_TextColorHint="@color/text_txt"
            app:npv_TextColorNormal="@color/text_txt"
            app:npv_TextColorSelected="@color/text_txt"
            app:npv_ItemPaddingHorizontal="5dp"
            app:npv_ItemPaddingVertical="5dp"
            app:npv_ShowCount="3"
            app:npv_TextSizeNormal="16sp"
            app:npv_TextSizeSelected="22px"
            app:npv_WrapSelectorWheel="true"/>

        <com.jancar.settings.widget.dateandtimepickerview.NumberPickerView
            android:id="@+id/picker_day"
            android:layout_marginLeft="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="picker_minute"
            app:npv_HintText="@string/day_hint"
            app:npv_DividerColor="@color/div_dialog"
            app:npv_TextColorHint="@color/text_txt"
            app:npv_TextColorNormal="@color/text_txt"
            app:npv_TextColorSelected="@color/text_txt"
            app:npv_ItemPaddingHorizontal="5dp"
            app:npv_ItemPaddingVertical="5dp"
            app:npv_ShowCount="3"
            app:npv_TextSizeNormal="16sp"
            app:npv_TextSizeSelected="22px"
            app:npv_TextArray="@array/hour_display"
            app:npv_WrapSelectorWheel="true"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
             style="@style/dialog_bit"
            android:id="@+id/submitText"

            android:text="确定"
         />

    </RelativeLayout>
</LinearLayout>

